crates/ssa-workflow-derive/tests/ui/enum.stderr
error: CanonicalEncode can only be derived for unit enum variants
 --> tests/ui/enum.rs:5:5
  |
5 |     A(u8),
  |     ^
